GEODE-8705 - Fix upgrade tests.